--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "api": "nodemon src/api.js",
+    "dev": "npm run serve & npm run api"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "express": "^4.16.3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -18,6 +22,7 @@
     "@vue/cli-service": "^3.0.1",
     "@vue/eslint-config-standard": "^3.0.1",
     "node-sass": "^4.9.0",
+    "nodemon": "^1.18.3",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
   },
