--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "express": "^4.16.3",
+    "express-history-api-fallback": "^2.2.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
